--- a/app/views/transportabschnitte/edit.html.erb
+++ b/app/views/transportabschnitte/edit.html.erb
@@ -1,9 +1,18 @@
-<h1>Editing transportabschnitt</h1>
-<h3> Transportgrunddaten</h3>
-  <div class="btn-group header-buttons">
-    <%= link_to 'Zur Transport-Anzeige', @transport , class: "btn btn-primary" %>  
+<h1>Transportabschnitt bearbeiten</h1>
+
+<div class="row">
+
+  <div class="col-sm-7">
+    <%= render 'form' %>
   </div>
-<%= render "transporte/show_transport_grunddaten", transport: @transport %>  
 
-
-<%= render 'form' %>
+  <div class="col-sm-5">
+    <h3> Transportgrunddaten
+      <div class="btn-group header-buttons">
+        <%= link_to 'Zur Transport-Anzeige', @transport , class: "btn btn-primary" %>  
+      </div>
+    </h3>
+    <%= render "transporte/show_transport_grunddaten", transport: @transport %>
+  </div>
+  
+</div>
