--- a/app/views/application/_text_remove.html.erb
+++ b/app/views/application/_text_remove.html.erb
@@ -1,1 +1,1 @@
-<span class="glyphicon glyphicon-remove"></span> Löschen
+<button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
