--- a/app/views/beobachtungen/index.html.erb
+++ b/app/views/beobachtungen/index.html.erb
@@ -31,7 +31,7 @@
         <tr>
           <th>Datum</th>
           <th>Ort</th>
-          <th colspan="3"></th>
+          <th colspan="2"></th>
         </tr>
       </thead>
 
@@ -41,12 +41,10 @@
             <td><%= beobachtung.ankunft_zeit.to_formatted_s(:dmyz)   %></td>
             <td><%= beobachtung.ort %></td>
             <td><%= link_to 'Show', beobachtung %></td>
-            <td>
+            <td class="table-actions">
               <%= link_to edit_beobachtung_path(beobachtung) do
                 render 'text_edit'
               end %>
-            </td>
-            <td>
               <%= link_to beobachtung, method: :delete, data: { confirm: 'Willst du die Beobachtung wirklich löschen?' } do
                 render 'text_remove'
               end %>
