--- a/app/views/application/_text_edit.html.erb
+++ b/app/views/application/_text_edit.html.erb
@@ -1,1 +1,1 @@
-<span class="glyphicon glyphicon-edit"></span> Bearbeiten
+<button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-pencil"></span></button>
