--- a/app/views/transporte/_tabelle.html.erb
+++ b/app/views/transporte/_tabelle.html.erb
@@ -9,7 +9,7 @@
         <th>Start</th>
         <th>Ziel</th>
         <th>Stoff</th>
-        <th colspan="3"></th>
+        <th colspan="2"></th>
       </tr>
     </thead>
 
@@ -22,8 +22,14 @@
           <td><%= link_to transport.stoff, transport.stoff %></td>
           <td><%= link_to 'Show', transport %></td>
           <% if is_editor? %>
-            <td><%= link_to 'Bearbeiten', edit_transport_path(transport) %></td>
-            <td><%= link_to 'Löschen', transport, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td class="table-actions">
+              <%= link_to edit_transport_path(transport) do
+                render 'text_edit'
+              end %>
+              <%= link_to transport, method: :delete, data: { confirm: 'Willst du den Transport wirklich löschen?' } do
+                render 'text_remove'
+              end %>
+            </td>
           <% end %>
         </tr>
       <% end %>
