--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -49,7 +49,7 @@
           <% end %>
           <li class="dropdown">
             <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
-              <%= current_user.name %> <span class="caret"></span>
+              <span class="glyphicon glyphicon-user"></span> <%= current_user.name %> <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
               <li><%= link_to "Profil", current_user %></li>
