--- a/app/views/welcome/_aktuelle_transporte.html.erb
+++ b/app/views/welcome/_aktuelle_transporte.html.erb
@@ -4,6 +4,11 @@
     <tbody>
       <% @transporte.each do |transport| %>
         <tr>
+          <td>
+            <%= link_to transport do
+              render 'text_show'
+            end %>
+          </td>
           <td><%= l transport.datum %>: <strong><%= transport.stoff %></strong> von <%= link_to transport.start_anlage, transport.start_anlage %> nach <%= link_to transport.ziel_anlage, transport.ziel_anlage %></td>
         </tr>
       <% end %>
