--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,13 +8,13 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-12">
       <h2>Aktuelle Transporte</h2>
       <%= render "aktuelle_transporte" %>
     </div>
-    <div class="col-sm-6">
+<!--    <div class="col-sm-6">
       <h2>Transporte vor deiner Haustür?</h2>
       <input type="text" class="form-control">
-    </div>
+    </div>-->
   </div>
 </div>
