--- a/app/views/stoffe/_form.html.erb
+++ b/app/views/stoffe/_form.html.erb
@@ -42,7 +42,7 @@
   </div>
   
   <div class="actions">
-    <%= f.submit "Stoff erstellen/bearbeiten", class: "btn btn-success" %>
+    <%= f.submit class: "btn btn-success" %>
     <%= link_to "Abbrechen", stoffe_path, class: "btn btn-danger" %>
   </div>
     
