--- a/app/views/abfragen/calendar.html.erb
+++ b/app/views/abfragen/calendar.html.erb
@@ -1,29 +1,16 @@
 <h1>Ausgewählte Transporte</h1>
 
-<div class="row">
-  <div class="col-sm-8">
-    <p><%= @dort %></p>
-    <p> Zeitraum: <%= @zeitraum %></p>
-    <p> Stoffe : <%= @stoffe ? @stoffe : "Alle" %> </p>
-    <p> Start-Anlagen : <%= @start_anlagen ? @start_anlagen : "Alle"  %> </p>
-    <p> Ziel-Anlagen : <%= @ziel_anlagen ? @ziel_anlagen : "Alle" %> </p>
-    <p> Verkehrsträger: <%= @verkehrstraeger %></p>
-  </div>
+  <%= render 'auswahl_daten' %>
+
+  <%= form_tag({action: :show}, multipart: true, class: "clearfix") do %>
+    <%= hidden_field_tag "year", @year %>
+    <%= render 'hidden_fields' %>
+    <div class="btn-group pull-right" role="group" aria-label="...">
+      <%= submit_tag "Tabelle", class: "btn btn-primary" %>
+      <button type="button" class="btn btn-primary active">Kalender</button>   
+    </div>
+  <% end %>
   
-  <div class="col-sm-4">
-    <%= form_tag({action: :show}, multipart: true) do %>
-      <%= hidden_field_tag "year", @year %>
-      <%= render 'hidden_fields' %>
-      <div class="btn-group pull-right" role="group" aria-label="...">
-        <%= submit_tag "Tabelle", class: "btn btn-primary" %>
-        <button type="button" class="btn btn-primary active">Kalender</button>   
-      </div>
-      
-    <% end %>
-  </div>
-</div>
-
-
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1 class="panel-title calendar-title text-center">
