--- a/app/views/abfragen/index.html.erb
+++ b/app/views/abfragen/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Transport-Abfragen</h1>
+<h1>
+  Transport-Abfragen
+  <% if is_editor? %>
+    <div class="btn-group header-buttons">
+      <%= link_to 'Neuer Transport', new_transport_path, class: "btn btn-success" %>
+    </div>
+<% end %>
+</h1>
 <%= form_tag({action: :show}, multipart: true) do %>
   <div class="row">
   
