--- a/app/views/routen/show.html.erb
+++ b/app/views/routen/show.html.erb
@@ -10,4 +10,4 @@
 </h1>
 
 <h2>Durchfahrtsorte</h2>
-<%= render "durchfahrtsorte/durchfahrtsorte_auflistung", durchfahrtsorte: @route.durchfahrtsorte %>
+<%= render "durchfahrtsorte/durchfahrtsorte_auflistung", durchfahrtsorte: @route.ordered_durchfahrtsorte %>
