--- a/app/views/routen/new.html.erb
+++ b/app/views/routen/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Neue Transport-Route</h1>
-
+<h1>
+  Neue Transport-Route
+  <div class="btn-group header-buttons">
+    <%= link_to 'Alle Routen', routen_path, class: "btn btn-primary" %>
+  </div>
+</h1>
 <%= render 'form' %>
 
-<%= link_to 'Alle Routen', routen_path, class: "btn btn-primary" %>
+
