--- a/app/views/routen/_form.html.erb
+++ b/app/views/routen/_form.html.erb
@@ -1,3 +1,6 @@
+
+
+
 <%= form_for(@route) do |f| %>
   <% if @route.errors.any? %>
     <div id="error_explanation">
@@ -10,12 +13,22 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+   
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h2 class="panel-title">Start</h2>
+    </div>
+    <div class="panel-body">
+      <div class="form-group">
+        <%= f.label :name %><br>
+        <%= f.text_field :name, class: "form-control" %>
+      </div>
+    </div>
+    <div class="panel-footer">
+      <div class="actions">
+        <%= f.submit class: "btn btn-success" %>
+        <%= link_to 'Abbrechen', routen_path, class: "btn btn-primary" %>
+      </div>
+    </div>
   </div>
 <% end %>
