--- a/app/views/routen/index.html.erb
+++ b/app/views/routen/index.html.erb
@@ -1,12 +1,15 @@
 <h1>
-Alle angelegten Routen
+Alle angelegten Transport-Routen
 <% if is_editor? %>
   <div class="btn-group header-buttons">
     <%= link_to 'Neue Route', new_route_path, class: "btn btn-success" %>
   </div>
 <% end %>
 </h1>
-
+<p>
+  Jede Route sollte nur jeweils für einen Transportabschnitt gelten. 
+  Die Durchfahrtsorte können nach Anlegen der Route eingetragen werden und in der Reihenfolge des Durchfahrens verändert werden.
+</p>
 
 <% if @routen.empty? %>
   <p>Keine Routen gefunden.</p>
