--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,6 +30,7 @@
               <li><%= link_to "Radioaktive Stoffe", stoffe_path %></li>
               <li><%= link_to "Transportfirmen", firmen_path %></li>
               <li><%= link_to "Transporte", transporte_path %></li>
+              <li><%= link_to "Transport-Routen", routen_path %></li>
               <li><%= link_to "Beobachtungen", beobachtungen_path %></li>
               <li><%= link_to "Orte", orte_path %></li>
             </ul>
