--- a/app/views/routen/show.html.erb
+++ b/app/views/routen/show.html.erb
@@ -14,6 +14,9 @@
   <div class="col-sm-6">
     <h3>Durchfahrtsorte</h3>
     <%= render "durchfahrtsorte/durchfahrtsorte_auflistung", durchfahrtsorte: @route.ordered_durchfahrtsorte %>
+  
+    <h3>Transporte</h3>
+    <%= render "transporte/show_only_tabelle", transporte: @route.transporte %>
   </div>
   
   
